WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111565
[V8] REGRESSION(
r144617
): Wrong usage of overwritten variable in toDOMWindow (V8Binding.cpp)
https://bugs.webkit.org/show_bug.cgi?id=111565
Summary
[V8] REGRESSION(r144617): Wrong usage of overwritten variable in toDOMWindow ...
Marja Hölttä
Reported
2013-03-06 05:27:31 PST
The patch in
bug 110875
wasn't quite right. This should fix it.
Attachments
Patch
(1.45 KB, patch)
2013-03-06 05:28 PST
,
Marja Hölttä
no flags
Details
Formatted Diff
Diff
Patch
(2.17 KB, patch)
2013-03-06 05:46 PST
,
Marja Hölttä
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Marja Hölttä
Comment 1
2013-03-06 05:28:21 PST
Created
attachment 191726
[details]
Patch
Kentaro Hara
Comment 2
2013-03-06 05:30:52 PST
Comment on
attachment 191726
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=191726&action=review
The change looks reasonable.
> Source/WebCore/ChangeLog:3 > + Follow up-fixes to
bug 110875
It's good to mention that this is a follow-up fix for the bug, but please add a more descriptive title. Some people in WebKit are scanning all titles.
> Source/WebCore/ChangeLog:7 > +
Ditto. Please explain the rationale for the change.
jochen
Comment 3
2013-03-06 05:35:39 PST
Comment on
attachment 191726
[details]
Patch ok. please modify the changelog as kentaro requested
Marja Hölttä
Comment 4
2013-03-06 05:46:55 PST
Created
attachment 191734
[details]
Patch
Kentaro Hara
Comment 5
2013-03-06 05:47:32 PST
Comment on
attachment 191734
[details]
Patch Thanks!
WebKit Review Bot
Comment 6
2013-03-06 06:32:46 PST
Comment on
attachment 191734
[details]
Patch Clearing flags on attachment: 191734 Committed
r144919
: <
http://trac.webkit.org/changeset/144919
>
WebKit Review Bot
Comment 7
2013-03-06 06:32:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug