REGRESSION(r144617): Wrong usage of overwritten variable in toDOMWindow (V8Binding.cpp) https://bugs.webkit.org/show_bug.cgi?id=111565

Patch by Marja Hölttä <marja@chromium.org> on 2013-03-06
Reviewed by Jochen Eisinger.

In toDOMWindow, the variable "global" was first nuked, and then used again. This
change was introduced in r144617.

No new tests (no functional changes).

* bindings/v8/V8Binding.cpp:
(WebCore::toDOMWindow):

Canonical link: https://commits.webkit.org/129935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144919 268f45cc-cd09-0410-ab3c-d52691b4dbfc